2006-10-31  Andrey Slusar  <anrays@gmail.com>

	* src/common/msgid.c:
	* src/include/packet.h:
	* src/toss/ftntoss.c:
	name_from, name_to, subject is char types.

2006-10-20  Andrey Slusar  <anrays@gmail.com>

	* src/toss/ftntoss.c: Fix checking NULL entries in areas
	(patch from Yauheni Kaliuta).
	* src/common/areas.c: Correct types for x_a and x_g
	(patch from Yauheny Kaliuta).

2006-10-14  Andrey Slusar  <anrays@gmail.com>

	======= Release 5.1.5ds ========================
	------- CVS tag R515 ---------------------------
	* configure.in: Bump to 5.1.5ds.
	* version.h (PATCHLEVEL): Ditto.

2006-10-13  Andrey Slusar  <anrays@gmail.com>

	* src/common/lock.c: Fix stale locks detecting(patch
	from Zhenya Kaluta, tested by Evgeniy Kozhuhovskiy).
	* src/common/log.c: Comment breaking code(modified
	patch from Zhenya Kaluta, tested by Evgeniy Kozhuhovskiy).
	* src/toss/runinc.c (toss_init): Fix return values.
	* src/include/packet.h (struct): Fix types for name_to,
	name_from, subject.
	* src/common/areas.c (areas_init_xlate): Fix types
	for x_a and x_g.

2006-05-09  Andrey Slusar  <anrays@gmail.com>

	* configure.in: Update my email address, correct
	fidogate version number in AM_INIT_AUTOMAKE.
	* Makefile.am (installdirs): Add needed spaces
	(thanks to Evgeniy Kozhuhovskiy).

2006-03-22  Andrey Slusar  <anrays@gmail.com>

	======= Release 5.1.4ds ========================
	------- CVS tag R514 ---------------------------
	* configure.in: Bump to 5.1.4ds.
	* version.h (PATCHLEVEL): Ditto.

2006-02-26  Andrey Slusar  <anray@users.sourceforge.net>

	* src/areafix/areafix.c (cmd_sub): Fix build warning.

2005-11-23  Andrey Slusar  <anray@users.sourceforge.net>

	* src/tick/ftntick.c (process_tic): Fix detecting
	options from uplinks(thanks to Alexey Illarionov).
	* src/toss/ftntoss.c: Added int_uplinks flag.
	(do_echomail): Fix detecting options from uplinks,
	added initing uplinks file(bug, reported by Pasha.K).

2005-04-23  Andrey Slusar  <anray@users.sourceforge.net>
